src/components/Start-left.css
.left-main {
  display: flex;
  flex-direction: row;
  height: 100%;
  width: 20vw;
}

.left-content-main {
  display: grid;
  grid-template-rows: 3vw auto;
  grid-template-areas: "header" "main";
  justify-content: center;
  width: 100%;
}

.class-created-for-seperator {
  display: flex;
  flex-direction: column;
}

.header-left-main {
  grid-area: header;
  height: 100%;
  display: flex;
  flex-direction: row;
  gap: 0.3vw;
  align-items: center;
  justify-content: center;
  width: 19.9vw;
}

.custom-separator-for-start-purpose {
  height: 100%;
  width: 1px;
  background-color: black;
}

.Project-system-files {
  font-size: 0.8vw;
  height: 100%;
  width: calc(100% / 3);
  display: flex;
  align-items: center;
  justify-content: center;
}

.Problem-description-main {
  font-size: 0.8vw;
  height: 100%;
  width: calc(100% / 3);
  border-right: 1px solid black;
  display: flex;
  align-items: center;
  justify-content: center;
}

.Building-blocks {
  font-size: 0.8vw;
  height: 100%;
  width: calc(100% / 3);
  display: flex;
  align-items: center;
  justify-content: center;
}

.custom-line-horizontal {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 1px;
  background-color: black;
  align-self: center;
}

.all-type-of-content {
  grid-area: main;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 0.8vw;
}

.custom-line-leftmiddle {
  display: flex;
  justify-content: center;
  width: 1px;
  height: 100%;
  background-color: black;
  align-self: center;
}

.invisible-button {
  /* Show pointer on hover, removing the default 'text' cursor */
  cursor: pointer;

  /* Remove default button styles (if any) */
  background: none;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  /* Keep existing text style from the parent classes */

  /* Optional: Some hover feedback for the user */
  transition: background-color 0.2s;
}
.invisible-button:hover {
  background-color: rgba(0, 0, 0, 0.1); /* Light grey highlight on hover */
}

